@@ -9,7 +9,6 @@ package org.ucdetector.action;
 
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Shell;
@@ -45,13 +44,5 @@ public class CountAction extends AbstractUCDetectorAction {
       }
     });
     return status;
-  }
-
-  /**
-   * this action is enabled for all JavaElement. Includes JavaElement in jars
-   */
-  @Override
-  protected void handleJavaElementSelections(IAction action) {
-    action.setEnabled(true);
   }
 }
